# rust-diesel-crud

./: Cargo.toml  sqlite.db
migrations/2023-02-05-115149_create_posts/: up.sql
src/: main.rs
src/db/: database.rs  models.rs  schema.rs
