[package]
name = "rust-diesel-crud"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.3", features = ["chrono", "sqlite", "returning_clauses_for_sqlite_3_35"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = { version = "0.15.0" }
rusqlite = { version = "0.28.0", features = ["bundled"] }
